optimized code, added tests